--- a/parcialesmedia/_mainmedia.scss
+++ b/parcialesmedia/_mainmedia.scss
@@ -54,6 +54,10 @@ main {
             width: 226px;
             height: 56px;
             border-radius: 5px;
+            &:hover {
+                background-image: linear-gradient(225deg, #0000FE 0%, #00F0B8 100%);
+                color: white;
+            }
             .text-btn-primary {
                 margin-top: 15px;
                 font-size: 18px;
