--- a/styles.css
+++ b/styles.css
@@ -190,6 +190,7 @@ main #description .btn-primary1 {
   background-color: #00F3BB;
   vertical-align: middle;
   border-radius: 5px;
+  color: #060A24;
 }
 
 main #description .btn-primary1 .text-btn-primary {
@@ -198,7 +199,6 @@ main #description .btn-primary1 .text-btn-primary {
   letter-spacing: 0px;
   font-style: italic;
   font-family: "IBM Plex Sans", sans-serif;
-  color: #060A24;
   font-weight: 800;
   font-size: 22px;
   line-height: 22px;
@@ -730,6 +730,10 @@ main footer .disclaimer p:first-child {
     width: 226px;
     height: 56px;
     border-radius: 5px;
+  }
+  main #description .btn-primary1:hover {
+    background-image: linear-gradient(225deg, #0000FE 0%, #00F0B8 100%);
+    color: white;
   }
   main #description .btn-primary1 .text-btn-primary {
     margin-top: 15px;
