--- a/parciales/_main.scss
+++ b/parciales/_main.scss
@@ -346,6 +346,7 @@ main {
             font-weight: 600;
             color: $font-dark;
             margin-left: 5vw;
+            margin-bottom: 30px;
         }
         .mapa-container {
             margin-top: 30px;
