--- a/parciales/_header.scss
+++ b/parciales/_header.scss
@@ -2,17 +2,14 @@ header {
     display: flex;
     flex-flow: row nowrap;
     justify-content: space-between;
-    padding: 4vw 6vw 4vw 4vw;
+    padding: 4vw 6vw 0vw 4vw;
     background-color: $bg-primary;
-    
-
     // posicion logo
     .logo_menu {
-        width: 100px;
-        height: 80px;
+        width: 130px;
+        height: 110px;
         margin-top: -10px;
     }
-
     // posicion y funcionamiento menu hamburguesa
     #menu_checker {
         display: none;
@@ -20,47 +17,53 @@ header {
     #menu_close {
         display: none;
     }
-
+    #menu_open {
+        font-size: 1.5em;
+    }
     #menu {
         display: none;
-        background-color: $bg-menu;
+        background-color: #001121;
         ul {
             display: flex;
             flex-direction: column;
             justify-content: space-between;
             box-sizing: border-box;
-            padding-left: 3%;
+            padding-left: 0;
             margin: 0;
             li {
                 text-transform: uppercase;
-                text-align: left;
+                text-align: center;
                 line-height: 28px;
                 letter-spacing: 0;
-                margin: 2px 19px;
                 list-style: none;
+                border-top: solid rgba(128, 128, 128, 0.5) 1px;
                 a {
                     text-decoration: none;
                     color: $font-light;
-                    font-family: $font-primary;
+                    font-family: $font-title;
+                    font-weight: bold;
+                    letter-spacing: 1px;
+                    &:hover {
+                        color: gray;
+                    }
                 }
             }
         }
     }
-
-    #menu_checker:checked ~ #menu_open {
+    #menu_checker:checked~#menu_open {
         display: none;
         margin-right: 0;
         width: 0;
         height: 0;
     }
-    #menu_checker:checked ~ #menu_close {
+    #menu_checker:checked~#menu_close {
         display: block;
+        font-size: 1.5em;
     }
-
-    #menu_checker:checked ~ #menu {
+    #menu_checker:checked~#menu {
         display: block;
         position: absolute;
-        top: 70px;
+        top: 95px;
         left: 0px;
         width: 100%;
         z-index: 100;
