--- a/parcialesmedia/_headermedia.scss
+++ b/parcialesmedia/_headermedia.scss
@@ -2,7 +2,6 @@ header {
     padding: 50px 100px;
     box-sizing: border-box;
     width: 100vw;
-
     // posicion logo
     .logo_menu {
         margin-top: -40px;
@@ -10,26 +9,21 @@ header {
         width: 170px;
         height: 150px;
     }
-
     // posicion y funcionamiento menu hamburguesa
     #menu_checker {
         display: none;
     }
-
     #menu_close {
         display: none;
     }
-
     #menu_open {
         display: none;
     }
-
     #menu {
         display: inline-block;
         width: auto;
         background-color: $bg-primary;
         box-sizing: border-box;
-
         ul {
             display: flex;
             flex-direction: row;
@@ -42,7 +36,7 @@ header {
                 letter-spacing: 0;
                 margin: 2px 19px;
                 font-size: 1.5vw;
-
+                border-top: none;
                 a {
                     text-decoration: none;
                     color: $font-dark;
@@ -50,6 +44,7 @@ header {
                     font-weight: bold;
                     &:hover {
                         text-shadow: 0px 0px 5px gray;
+                        color: $font-dark;
                     }
                 }
             }
