--- a/styles.css
+++ b/styles.css
@@ -9,13 +9,13 @@ header {
   -webkit-box-pack: justify;
       -ms-flex-pack: justify;
           justify-content: space-between;
-  padding: 4vw 6vw 4vw 4vw;
+  padding: 4vw 6vw 0vw 4vw;
   background-color: #FFFFFF;
 }
 
 header .logo_menu {
-  width: 100px;
-  height: 80px;
+  width: 130px;
+  height: 110px;
   margin-top: -10px;
 }
 
@@ -27,9 +27,13 @@ header #menu_close {
   display: none;
 }
 
+header #menu_open {
+  font-size: 1.5em;
+}
+
 header #menu {
   display: none;
-  background-color: #0000FF;
+  background-color: #001121;
 }
 
 header #menu ul {
@@ -45,23 +49,29 @@ header #menu ul {
           justify-content: space-between;
   -webkit-box-sizing: border-box;
           box-sizing: border-box;
-  padding-left: 3%;
+  padding-left: 0;
   margin: 0;
 }
 
 header #menu ul li {
   text-transform: uppercase;
-  text-align: left;
+  text-align: center;
   line-height: 28px;
   letter-spacing: 0;
-  margin: 2px 19px;
   list-style: none;
+  border-top: solid rgba(128, 128, 128, 0.5) 1px;
 }
 
 header #menu ul li a {
   text-decoration: none;
   color: #FFFFFF;
-  font-family: "Roboto Slab", "IBM Plex Mono", monospace;
+  font-family: "IBM Plex Sans", sans-serif;
+  font-weight: bold;
+  letter-spacing: 1px;
+}
+
+header #menu ul li a:hover {
+  color: gray;
 }
 
 header #menu_checker:checked ~ #menu_open {
@@ -73,12 +83,13 @@ header #menu_checker:checked ~ #menu_open {
 
 header #menu_checker:checked ~ #menu_close {
   display: block;
+  font-size: 1.5em;
 }
 
 header #menu_checker:checked ~ #menu {
   display: block;
   position: absolute;
-  top: 70px;
+  top: 95px;
   left: 0px;
   width: 100%;
   z-index: 100;
@@ -562,6 +573,7 @@ main .ubicacion h2 {
   font-weight: 600;
   color: #060A24;
   margin-left: 5vw;
+  margin-bottom: 30px;
 }
 
 main .ubicacion .mapa-container {
@@ -658,6 +670,7 @@ main footer .disclaimer p:first-child {
     letter-spacing: 0;
     margin: 2px 19px;
     font-size: 1.5vw;
+    border-top: none;
   }
   header #menu ul li a {
     text-decoration: none;
@@ -667,6 +680,7 @@ main footer .disclaimer p:first-child {
   }
   header #menu ul li a:hover {
     text-shadow: 0px 0px 5px gray;
+    color: #060A24;
   }
   main #description {
     padding-left: 6.9vw;
@@ -1020,7 +1034,6 @@ main footer .disclaimer p:first-child {
     margin-left: 100px;
   }
   main .ubicacion .mapa-container {
-    margin-top: 100px;
     display: -webkit-box;
     display: -ms-flexbox;
     display: flex;
