--- a/galeria.css
+++ b/galeria.css
@@ -60,6 +60,7 @@ header #menu ul li {
     letter-spacing: 0;
     list-style: none;
     border-top: solid rgba(128, 128, 128, 0.5) 1px;
+    padding: 5px 0;
 }
 
 header #menu ul li a {
