--- a/nosotros.css
+++ b/nosotros.css
@@ -66,6 +66,7 @@ header #menu ul li {
     letter-spacing: 0;
     list-style: none;
     border-top: solid rgba(128, 128, 128, 0.5) 1px;
+    padding: 5px 0;
 }
 
 header #menu ul li a {
