--- a/parciales/_header.scss
+++ b/parciales/_header.scss
@@ -37,6 +37,7 @@ header {
                 letter-spacing: 0;
                 list-style: none;
                 border-top: solid rgba(128, 128, 128, 0.5) 1px;
+                padding: 5px 0;
                 a {
                     text-decoration: none;
                     color: $font-light;
