--- a/parcialesmedia/_mainmedia.scss
+++ b/parcialesmedia/_mainmedia.scss
@@ -1,4 +1,60 @@
 main {
+    .roller-container {
+        display: block;
+        position: fixed;
+        left: 0;
+        top: 22%;
+        width: 40%;
+        .roller-flex-column {
+            display: flex;
+            flex-flow: column nowrap;
+            justify-content: space-between;
+            .roller {
+                width: 40%;
+                height: 45px;
+                margin: 1px 0;
+                border-radius: 0 20px 20px 0;
+                padding: 0 2% 0 3%;
+                margin-left: -31%;
+                .roller-inner {
+                    display: flex;
+                    flex-flow: row nowrap;
+                    justify-content: space-between;
+                    align-items: center;
+                    width: 100%;
+                    height: 100%;
+                    img {
+                        width: 30px;
+                        height: 30px;
+                        border-radius: 10px;
+                    }
+                    a {
+                        text-decoration: none;
+                        font-style: italic;
+                        color: white;
+                        font-weight: 500;
+                        font-size: 1em;
+                    }
+                }
+                &:hover {
+                    margin-left: 0;
+                    transition: ease-in-out 0.6s;
+                }
+            }
+            #roller-ins {
+                background-image: linear-gradient(225deg, $bg-gradient-top 0%, $bg-gradient-bottom 100%);
+            }
+            #roller-face {
+                background-color: rgb(33, 83, 156);
+            }
+            #roller-twit {
+                background-color: rgb(69, 199, 251);
+            }
+            #roller-wt {
+                background-color: rgb(1, 188, 55);
+            }
+        }
+    }
     //posicionamiento y estilo de la descripcion
     #description {
         padding-left: 6.9vw;
@@ -26,13 +82,7 @@ main {
             content: " ";
         }
         .social_media_icon_cont {
-            position: fixed;
-            top: 30px;
-            width: 300px;
-            padding-right: 15px;
-            margin: 0;
-            width: auto;
-            height: auto;
+            display: none;
             .social-icon {
                 display: flex;
                 flex-flow: column nowrap;
@@ -55,7 +105,7 @@ main {
             height: 56px;
             border-radius: 5px;
             &:hover {
-                background-image: linear-gradient(225deg, #0000FE 0%, #00F0B8 100%);
+                background-image: linear-gradient(225deg, #0000fe 0%, #00f0b8 100%);
                 color: white;
             }
             .text-btn-primary {
