--- a/parcialesmedia/_mainmedia.scss
+++ b/parcialesmedia/_mainmedia.scss
@@ -112,6 +112,7 @@ main {
                 margin-top: 15px;
                 font-size: 18px;
                 line-height: 24px;
+                font-weight: 700;
             }
         }
     }
